feat(opennav_docking): Add dynamic lifecycle for external detectors
This change introduces an API to dynamically enable and disable external
docking detectors, such as those based on AI, to conserve system
resources when not actively docking.

Key changes:
- Added `startDetectionProcess()` and `stopDetectionProcess()` to the
  docking plugin interface (`ChargingDock` and `NonChargingDock`).
- Implemented this logic in `SimpleChargingDock` and
  `SimpleNonChargingDock` using a `std_srvs/Trigger` service call and
  dynamic topic subscription to manage the detector's lifecycle.
- The `DockingServer` now ensures `stopDetectionProcess()` is called
  on all exit paths, including success, failure, and cancellation,
  to prevent dangling resources.
- Added new parameters (`detector_service_name`, `subscribe_toggle`, etc.)
  to configure this behavior and updated the README documentation.
- Added comprehensive C++ unit tests to verify the new detector
  lifecycle logic, specifically covering service failure cases and
  proper cleanup on action termination.

Closes #5015
Signed-off-by: Koensgen Benjamin <b.koensgen@gmail.com>

-

updtae

Signed-off-by: Koensgen Benjamin <b.koensgen@gmail.com>

--- a/nav2_docking/opennav_docking/CMakeLists.txt
+++ b/nav2_docking/opennav_docking/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(yaml_cpp_vendor REQUIRED)
 find_package(yaml-cpp REQUIRED)
+find_package(std_srvs REQUIRED)
 
 nav2_package()
 
@@ -116,13 +117,14 @@ target_link_libraries(simple_charging_dock PUBLIC
   pose_filter
   rclcpp::rclcpp
   rclcpp_lifecycle::rclcpp_lifecycle
+  nav2_util::nav2_util_core
   ${sensor_msgs_TARGETS}
+  ${std_srvs_TARGETS}
   tf2_geometry_msgs::tf2_geometry_msgs
   tf2_ros::tf2_ros
 )
 target_link_libraries(simple_charging_dock PRIVATE
   angles::angles
-  nav2_util::nav2_util_core
   pluginlib::pluginlib
   tf2::tf2
 )
@@ -141,13 +143,14 @@ target_link_libraries(simple_non_charging_dock PUBLIC
   pose_filter
   rclcpp::rclcpp
   rclcpp_lifecycle::rclcpp_lifecycle
+  nav2_util::nav2_util_core
   ${sensor_msgs_TARGETS}
+  ${std_srvs_TARGETS}
   tf2_geometry_msgs::tf2_geometry_msgs
   tf2_ros::tf2_ros
 )
 target_link_libraries(simple_non_charging_dock PRIVATE
   angles::angles
-  nav2_util::nav2_util_core
   pluginlib::pluginlib
   tf2::tf2
 )
@@ -191,6 +194,7 @@ ament_export_dependencies(
   nav2_graceful_controller
   nav2_msgs
   nav2_util
+  std_srvs
   opennav_docking_core
   pluginlib
   rclcpp
